[package]
name = "gentleman_green"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
crossterm = "0.27.0"
crypto = "0.5.1"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
eframe = "0.25.0"
egui = "0.25.0"
hex = "0.4.3"
rand_chacha = "0.3.1"
walkdir = "2.4.0"
win-msgbox = "0.1.2"
